<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        android:id="@+id/swipeRefreshLayout"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/walletList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/multiple_view_background"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/load_data_error"
                app:layout_constraintStart_toStartOf="@+id/load_data_error"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
                android:id="@+id/refresh_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                app:layout_constraintTop_toBottomOf="@+id/walletList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center_horizontal"
                android:layout_margin="15dp"
                android:textColor="#2196F3"
                android:linksClickable="true"
                android:background="?attr/selectableItemBackground"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="15dp"/>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:layout_constraintEnd_toEndOf="@+id/load_data_error"
                app:layout_constraintStart_toStartOf="@+id/load_data_error"
                app:layout_constraintTop_toBottomOf="@+id/walletList"
                android:layout_marginTop="50dp"/>

        <TextView
                android:id="@+id/load_data_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/error_data"
                android:gravity="center"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/conversionLayout"
                      android:orientation="vertical"
                      android:layout_width="0dp"
                      android:layout_height="0dp"
                      android:padding="20dp"
                      android:layout_margin="8dp"
                      app:layout_constraintTop_toBottomOf="@id/load_data_error"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                    android:id="@+id/exchange_amount_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_exchange_amount"
                    android:inputType="numberDecimal"
                    android:background="@drawable/multiple_view_background"
                    android:padding="10dp"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/convert_from"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:layout_margin="5dp"/>


            <Spinner
                    android:id="@+id/exchange_from_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

            </Spinner>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/convert_to"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:layout_margin="5dp"/>

            <Spinner
                    android:id="@+id/exchange_to_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

            </Spinner>

            <Button
                    android:id="@+id/exchange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/convert"
                    android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>